src/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');

@tailwind base;
body {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family:
    Inter,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    sans-serif;
  text-rendering: optimizeLegibility;

  @apply duration-500 text-base transition-colors;
}

body,
html {
  @apply h-full;
}

html.dark,
html[data-theme='dark'] {
  --bg-active: #242b40;
  --text-main: #f7f7f7;
  --text-secondary: #6f6e84;
}
@tailwind components;
#app {
  @apply bg-gray-100 dark:bg-gray-dark-100 flex h-screen;
}

:root {
  --bg-active: #fbfbfc;
  --text-main: #333;
  --text-secondary: #4b525d;
}
@tailwind utilities;
.no-scrollbar::-webkit-scrollbar {
  display: none;
}
.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.table th:first-child {
  position: relative;
  z-index: 2;
}

.slide-up-enter-active,
.slide-up-leave-active {
  transition: all 0.25s ease-out;
}

.slide-up-enter-from {
  opacity: 0;
  transform: translateY(calc(80%));
}

.slide-up-leave-to {
  opacity: 0;
  transform: translateY(-calc(15%));
}

